--- a/style.css
+++ b/style.css
@@ -11,3 +11,13 @@ body {
     font-size: 16px;
     font-family: 'Times New Roman', Times, serif;
 }
+
+header {
+    background-color: var(--color-blue);
+    color: var(--color-white);
+}
+
+header > h1 {
+    margin: 0;
+    padding: 20px 10px;
+}
