add style to main
add bgcolor for books for vsiual

--- a/style.css
+++ b/style.css
@@ -21,3 +21,14 @@ header > h1 {
     margin: 0;
     padding: 20px 10px;
 }
+
+main {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
+    gap: 25px;
+    padding: 50px;
+}
+
+main > .book {
+    background-color: var(--color-yellow);
+}
