--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --color-white:#eaeada;
     --color-lightblue:#94a9b4;
     --color-red:#670000;
+    --box-shadow: 0px 5px 14px -1px rgba(0,0,0,0.48);
 }
 
 body {
@@ -15,20 +16,30 @@ body {
 header {
     background-color: var(--color-blue);
     color: var(--color-white);
+    box-shadow: var(--box-shadow);
 }
 
 header > h1 {
-    margin: 0;
+    margin: 0 15%;
     padding: 20px 10px;
 }
 
 main {
+    margin: 50px 15%;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
     gap: 25px;
-    padding: 50px;
 }
 
 main > .book {
     background-color: var(--color-yellow);
+    padding: 10px;
+    box-shadow: var(--box-shadow);
+    border-radius: 10px;
+    border: 2px solid var(--color-red);
+    text-align: center;
+}
+
+main > .book > * {
+    margin: 0;
 }
