--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: var(--color-white);
 }
 
 .modal > .content {
